added get user by id
