# backend/internal/entities/user_entity.go
@@ -25,3 +25,10 @@ type UserLoginRequest struct {
 type UserLoginResponse struct {
 	ID int `json:"id" db:"id"`
 }
+
+type UserGet struct {
+	ID           int    `json:"id" db:"id"`
+	Login        string `json:"login" db:"login"`
+	PasswordHash string `json:"password_hash" db:"password_hash"`
+	CreatedAt    string `json:"created_at" db:"created_at"`
+}
